boost1.50 (1.50.0-2) unstable; urgency=low

  * control: Fix list formatting in Boost.Chrono long description.
    Closes: #687296.

 -- Steve M. Robbins <steve@sumost.ca>  Sun, 23 Sep 2012 19:17:38 -0500

boost1.50 (1.50.0-1) unstable; urgency=low

  * Upstream release of 1.50.0.

 -- Steve M. Robbins <smr@debian.org>  Thu, 28 Jun 2012 21:28:37 -0500

boost1.50 (1.50.0~beta1final-1) experimental; urgency=low

  * New upstream.  This is really the "1.50.0 Beta 1" release.  Last
    release was actually "1.50.0 Beta 1 Release Candidate".

 -- Steve M. Robbins <smr@debian.org>  Fri, 08 Jun 2012 21:59:28 -0500

boost1.50 (1.50.0~beta1-1) experimental; urgency=low

  * New upstream: Beta 1 release of 1.50.
    - new lib packages for Boost.Exception.

  * patches/gcc4.7_trac-6790.patch:
  * patches/gcc4.7_trac-6854.patch:
  * patches/gcc4.7_trac-6755.patch:
  * patches/gcc4.7_trac-76970.patch:
  * patches/gcc4.7_trac-6331.patch:
  * patches/gcc4.7_trac-6431.patch:
  * patches/gcc4.7_trac-6852.patch: Removed.

 -- Steve M. Robbins <smr@debian.org>  Sat, 02 Jun 2012 11:42:00 -0500

boost1.49 (1.49.0-3) unstable; urgency=low

  * patches/gcc4.7_trac-6790.patch:
  * patches/gcc4.7_trac-6854.patch:
  * patches/gcc4.7_trac-6755.patch:
  * patches/gcc4.7_trac-76970.patch:
  * patches/gcc4.7_trac-6331.patch:
  * patches/gcc4.7_trac-6431.patch:
  * patches/gcc4.7_trac-6852.patch: New.  Fixes for gcc 4.7 from upstream.
    Closes: #671409

 -- Steve M. Robbins <smr@debian.org>  Sat, 05 May 2012 00:31:50 -0500

boost1.49 (1.49.0-2) unstable; urgency=low

  * control: Add missing -dev package Conflicts for: chrono, locale,
    random, and timer.  Closes: #666120, 666239.

 -- Steve M. Robbins <smr@debian.org>  Thu, 29 Mar 2012 21:30:22 -0500

boost1.49 (1.49.0-1) unstable; urgency=low

  * New upstream.

 -- Steve M. Robbins <smr@debian.org>  Sun, 26 Feb 2012 00:31:44 -0600

boost1.49 (1.49.0rc1-1) UNRELEASED; urgency=low

  * Upstream Release Candidate.
