@@ -288,10 +288,13 @@ install: build clean-debhelper $(filtered_files) debian/bjam.1
 	dh_link -plibboost$(PKGVERSION)-doc \
 	   usr/include/boost \
 	   usr/share/doc/libboost$(PKGVERSION)-doc/HTML/boost
-	# provide a constant symlink to the latest documents
+	# provide a constant symlink to the latest documents and examples
 	dh_link -plibboost$(PKGVERSION)-doc \
 	   usr/share/doc/libboost$(PKGVERSION)-doc/HTML \
 	   usr/share/doc/libboost-doc/HTML
+	dh_link -plibboost$(PKGVERSION)-doc \
+	   usr/share/doc/libboost$(PKGVERSION)-doc/examples \
+	   usr/share/doc/libboost-doc/examples
 
 	dh_installexamples -plibboost$(PKGVERSION)-doc debian/boost-build-examples
 	mkdir -p $(exampledir)
